Version 1.3
-----------
New Applications
- Internet : Google Talk, Maxthon, Opera, Skype
- Fun and Games : Battle for Wesnoth, Tremulous
- Utilities : ImageMagick, Launchy, Synergy
- Productivity : DVD-Flick, ImgBurn
- Libraries : K-Lite Mega Codec Pack
- Development : wxPython Documentation

GUI Enhancements
- Brand new look and feel sporting a vertical layout and colors.
- Added the Upgradeable category that lists all installed applications with
  available upgrades.

Internal Improvements
- Support for parallel downloading in order to make best use of the available
  net speed.
- Added MAJORMINORSUB_VERSION in order to support ImageMagick uninstallation.

Bug Fixes
- Fixed bug in "Update DB" where a failed DB download was wiping out the current
  DB and killing AppSnap.
- Installer filenames which do not contain any version information are now 
  redownloaded (if more than a day since the last download) since we have no way
  to know if the file has changed.
- Obsolete sections in installed.ini are now filtered out.

Scrape Fixes
- Fixed Adobe Reader scraping and download link.
- Fixed Firefox and Thunderbird download links, ftp was not working.
- WinSCP version scraping now done on Sourceforge.
- Dia's version search now includes pre-releases - e.g. 0.96-pre4
- uTorrent now has sub-version numbering - e.g. 1.6.1

Version 1.2.1
-------------
New Applications
- Internet : TightVNC
- Fun and Games : BZFlag, Celestia, Stellarium, TuxPaint, TuxPaint Stamps
- Development : MySQL
- Productivity : Blender3D, DeepBurner Free, Dia, Gimp
- Utilities : Ant Renamer, KeePass
- Libraries : GTK+
- Entertainment : Juice Receiver

Internal Improvements
- Added support for zipped installers. AppSnap now extracts the ZIP and then 
  executes the installer.
- All background actions are now performed in a separate thread to prevent the 
  AppSnap GUI from locking up.

Bug Fixes
- SourceForge just rolled out new changes which broke all applications hosted