@@ -75,7 +75,7 @@ class process:
         return None
 
     # Download the latest version of the application's installer
-    def download_latest_version(self):
+    def download_latest_version(self, progress_callback=None):
         # Get latest version if not already done
         if self.latestversion == None: self.get_latest_version()
 
@@ -110,7 +110,7 @@ class process:
             self.delete_older_versions()
 
             # Return false if download fails
-            if self.curl_instance.download_web_data(download, filename, referer) != True: return False
+            if self.curl_instance.download_web_data(download, filename, referer, progress_callback) != True: return False
 
         return cached_filename
 
